--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  name             : "Xin Zhang (张鑫)"
+  avatar           : "/assets/images/bio-photo.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "haha"
+  location         : "Hong Kong"
   email            :
   links:
     - label: "Email"
