--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Xin Zhang (张鑫)"
   avatar           : "/assets/images/bio-photo.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "PhD student @ HKUST(2021-)" # first line
+  bio              : "PhD student @ HKUST" # first line
   location         : "Hong Kong"
   email            :
   links:
