--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
   - title: "Publications"
     url: https://initzhang.github.io/#publications
   - title: "Miscellaneous"
-    url: https://initzhang.github.io/
+    url: /misc/
   # - title: "Sitemap"
   #   url: /sitemap/
