--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ locale                   : "en-US"
 title                    : #"Site Title"
 title_separator          : #"-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Xin Zhang"
-description              : "An amazing website."
+name                     : "Xin Zhang's Homepage"
+description              : #"An amazing website."
 url                      : https://xinzhang.me # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : Xin Zhang # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Xin's HomePage" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -206,6 +206,7 @@ sass:
   sass_dir: _sass
   style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
+permalink: /misc/
 
 # Outputting
 permalink: /:categories/:title/
