--- a/_config.yml
+++ b/_config.yml
@@ -108,17 +108,20 @@ author:
   avatar           : "/assets/images/bio-photo.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "PhD student @ HKUST" # first line
   location         : "Hong Kong"
-  email            : "xzhanggb@ust.hk"
+  email            : # "xzhanggb@ust.hk"
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:xzhanggb@ust.hk"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/xin-zhang-b91364191/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/initzhang"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+    - label: "Google Scholar"
+      icon: "fa fa-graduation-cap"
+      url: "https://scholar.google.com/citations?user=2lsBmH8AAAAJ&hl=en"
 
 # Site Footer
 footer:
